--- a/src/sass/components/_page-title.scss
+++ b/src/sass/components/_page-title.scss
@@ -1,45 +1,45 @@
 ﻿//
 // Page title component.
-// Documentation url: https://iambacon.co.uk/styleguide/components/page-title
+// Documentation url: https://styles.iambacon.co.uk/components/page-title/
 // -----------------------------------------------------------------------------
 
-.pageTitle {
+.c-pageTitle {
   background-color: $cursive;
   position: relative;
-}
 
-.pageTitle-headline {
-  @include font-size($h1-font-size);
-  @include line-height-proportional;
-  color: $marshmallow;
-  font-weight: 700;
-  margin: 0;
-  padding-top: $base-line-height;
-  padding-bottom: $base-line-height;
-  text-align: center;
-  display: block;
+  &-headline {
+    @include font-size($h1-font-size);
+    @include line-height-proportional;
+    color: $marshmallow;
+    font-weight: 700;
+    margin: 0;
+    padding-top: $base-line-height;
+    padding-bottom: $base-line-height;
+    text-align: center;
+    display: block;
 
-  @include respond-to(extra-small) {
-    @include font-size($h2-font-size);
+    @include respond-to(extra-small) {
+      @include font-size($h2-font-size);
+    }
+
+    &--sm {
+      @include respond-to(extra-small) {
+        @include font-size($h3-font-size);
+      }
+    }
   }
-}
 
-.pageTitle-headline--sm {
-  @include respond-to(extra-small) {
+  &-subline {
     @include font-size($h3-font-size);
-  }
-}
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: $base-line-height;
+    text-align: center;
+    color: $white;
 
-.pageTitle-subline {
-  @include font-size($h3-font-size);
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-bottom: $base-line-height;
-  text-align: center;
-  color: $white;
-
-  @include respond-to(extra-small) {
-    @include font-size($h4-font-size);
+    @include respond-to(extra-small) {
+      @include font-size($h4-font-size);
+    }
   }
 }
 
