refactor(component): add c- prefix to pagination
add `c-` prefix to pagination. Update docs and usage.

BREAKING CHANGE: css name change

--- a/docs/components/pagination.html
+++ b/docs/components/pagination.html
@@ -1,35 +1,35 @@
 ---
 layout: layout
 title: Pagination
-description: Pagination for lists of articles that span across multiple pages. Used on categories, tags and landing pages.
+description: Component representing the pagination for a list that spans across multiple pages.
 ---
 
 <section class="m-t--full">
     <h2 class="m-b--full">Example</h2>
     <div class="sg-example">
-        <nav class="pagination">
+        <nav class="c-pagination">
             <div class="g-paging">
-                <a class="pagination-page" href="#">1</a>
-                <span class="pagination-page" href="#">...</span>
-                <a class="pagination-page" href="#">4</a>
-                <a class="pagination-page pagination-page--current" href="#">5</a>
-                <a class="pagination-page" href="#">6</a>
+                <a class="c-pagination-page" href="#">1</a>
+                <span class="c-pagination-page" href="#">...</span>
+                <a class="c-pagination-page" href="#">4</a>
+                <a class="c-pagination-page c-pagination-page--current" href="#">5</a>
+                <a class="c-pagination-page" href="#">6</a>
             </div>
             <div class="g-paging-more">
-                <a class="pagination-more" href="#">Show more</a>
+                <a class="c-pagination-more" href="#">Show more</a>
             </div>
         </nav>
 {% highlight html %}
-<nav class="pagination">
+<nav class="c-pagination">
     <div class="g-paging">
-        <a class="pagination-page" href="#">1</a>
-        <span class="pagination-page" href="#">...</span>
-        <a class="pagination-page" href="#">4</a>
-        <a class="pagination-page pagination-page--current" href="#">5</a>
-        <a class="pagination-page" href="#">6</a>
+        <a class="c-pagination-page" href="#">1</a>
+        <span class="c-pagination-page" href="#">...</span>
+        <a class="c-pagination-page" href="#">4</a>
+        <a class="c-pagination-page c-pagination-page--current" href="#">5</a>
+        <a class="c-pagination-page" href="#">6</a>
     </div>
     <div class="g-paging-more">
-        <a class="pagination-more" href="#">Show more</a>
+        <a class="c-pagination-more" href="#">Show more</a>
     </div>
 </nav>
 {% endhighlight %}
