chore(scss): update documentation urls

--- a/src/sass/components/_tag.scss
+++ b/src/sass/components/_tag.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Tag component.
-// Documentation url: https://iambacon.co.uk/styleguide/components/tag
+// Documentation url: https://styles.iambacon.co.uk/components/tag/
 // -----------------------------------------------------------------------------
 
 .c-tag {
