--- a/src/sass/utilities/_colours.scss
+++ b/src/sass/utilities/_colours.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Helper classes for colours.
-// Documentation url: https://iambacon.co.uk/styleguide/utilities/colours
+// Documentation url: https://styles.iambacon.co.uk/utilities/colours/
 // -----------------------------------------------------------------------------
 
 .takeYourDesire {
