--- a/src/sass/utilities/_display.scss
+++ b/src/sass/utilities/_display.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Display helper classes.
-// Documentation url: https://iambacon.co.uk/styleguide/utilities/display
+// Documentation url: https://styles.iambacon.co.uk/utilities/display/
 // -----------------------------------------------------------------------------
 
 .block {
