--- a/src/sass/utilities/_floats.scss
+++ b/src/sass/utilities/_floats.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Helper classes for floats and clearing of floats.
-// Documentation url: https://iambacon.co.uk/styleguide/utilities/floats
+// Documentation url: https://styles.iambacon.co.uk/utilities/floats/
 // -----------------------------------------------------------------------------
 
 // clear with overflow: hidden
