--- a/src/sass/utilities/_grid.scss
+++ b/src/sass/utilities/_grid.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Helper classes for grids and layouts.
-// Documentation url: https://iambacon.co.uk/styleguide/utilities/grid
+// Documentation url: https://styles.iambacon.co.uk/utilities/grid/
 // -----------------------------------------------------------------------------
 
 .layoutContainer {
