--- a/src/sass/utilities/_social.scss
+++ b/src/sass/utilities/_social.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Helper classes for social media.
-// Documentation url: https://iambacon.co.uk/styleguide/utilities/social
+// Documentation url: https://styles.iambacon.co.uk/utilities/social/
 // -----------------------------------------------------------------------------
 
 .social {
