--- a/src/sass/utilities/_spacing.scss
+++ b/src/sass/utilities/_spacing.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Margin & padding helper classes.
-// Documentation url: https://styles.iambacon.co.uk/utilities/spacing
+// Documentation url: https://styles.iambacon.co.uk/utilities/spacing/
 // -----------------------------------------------------------------------------
 
 .m-r {
