--- a/src/sass/objects/_lists.scss
+++ b/src/sass/objects/_lists.scss
@@ -23,7 +23,7 @@
       width: 6px;
       height: 6px;
       border-radius: 50%;
-      background-color: $cursive;
+      background-color: $list-bullet-color;
       margin-right: 13px;
     }
   }
