--- a/src/sass/components/_aside-nav.scss
+++ b/src/sass/components/_aside-nav.scss
@@ -7,8 +7,8 @@
   &-title {
     font-size: $h3-font-size;
     @include vr-line-height($h3-font-size, 2);
-    color: $marshmallow;
-    background-color: $ill-stay-here;
+    color: $aside-nav-title-color;
+    background-color: $aside-nav-title-bg;
     padding-left: 20px;
   }
 
@@ -25,7 +25,7 @@
 
     &-count {
       float: right;
-      color: $nobel;
+      color: $aside-nav-count-color;
     }
   }
 }
